--- a/sensor_config.json
+++ b/sensor_config.json
@@ -2,13 +2,33 @@
   "sensors":
   [
 
-    { "name" : "ch4",
+    { "name" : "dht11",
       "readlatency": 0.6,
       "period": 8.0,
-      "size": 8,
-      "ro" : 1,
-      "gamma": 1,
-      "analogpin": 4
+      "id": 1
+    },
+     { "name" : "mq4",
+      "readlatency": 0.6,
+      "period": 8.0,
+      "id": 6,
+       "calib": 2
+    },
+     { "name" : "mq6",
+      "readlatency": 0.6,
+      "period": 8.0,
+      "id": 7,
+       "calib": 3
+    },
+     { "name" : "mq135",
+      "readlatency": 0.6,
+      "period": 8.0,
+      "id": 8,
+       "calib": 4
+    },
+     { "name" : "dust",
+      "readlatency": 0.6,
+      "period": 8.0,
+      "id": 5
     }
 
   ],
